--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^6.1.8",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
