--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
     "@reduxjs/toolkit": "^2.3.0",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.0",
     "jwt-decode": "^4.0.0",
+    "libsodium-wrappers": "^0.7.15",
     "react": "^19.0.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^19.0.0",
