--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.0",
+    "firebase": "^11.2.0",
     "jwt-decode": "^4.0.0",
     "libsodium-wrappers": "^0.7.15",
     "react": "^19.0.0",
