--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.0",
     "firebase": "^11.2.0",
+    "framer-motion": "^12.0.6",
     "jwt-decode": "^4.0.0",
     "libsodium-wrappers": "^0.7.15",
     "react": "^19.0.0",
