--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^12.0.6",
     "jwt-decode": "^4.0.0",
     "libsodium-wrappers": "^0.7.15",
+    "marked": "^15.0.7",
     "react": "^19.0.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^19.0.0",
