--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "minglechatapp",
+  "name": "ChatNestchatapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -46,7 +46,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
-    "vite": "^5.4.10",
+    "vite": "^7.1.1",
     "vite-plugin-mkcert": "^1.17.6"
   }
 }
